--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fira Code', monospace;
     background-color: #10100F; /* Fondo oscuro */
     color: #FFFEF0; /* Texto claro */
     margin: 0;
